--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.1",
-    "express-session": "^1.15.1"
+    "express": "^4.14.1",
+    "express-session": "^1.15.1",
+    "method-override": "^2.3.7",
+    "path": "^0.12.7"
   }
 }
